fixed whitespace issue

--- a/src/components/flow/actions/sendmsg/SendMsg.module.scss
+++ b/src/components/flow/actions/sendmsg/SendMsg.module.scss
@@ -33,5 +33,5 @@
   display: block;
   margin-top: 3px;
   min-height: 11px;
-  white-space: 'pre-wrap';
+  white-space: pre-wrap;
 }
